[tool.poetry]
name = "vscode-python"
version = "0.1.0"
description = ""
authors = ["Mamoru Matsunaga <pineb1ue10ngtree@gmail.com>"]
readme = "README.md"
packages = [{include = "vscode_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
isort = "^5.12.0"
mypy = "^1.7.1"
taskipy = "^1.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py310"
line-length = 120
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/**/*.py"]

[tool.taskipy.tasks]
format = {cmd = "poetry run black ./src", help = "run formatter"}
lint = {cmd = "poetry run ruff ./src", help = "run linter"}
ci = {cmd = "poetry run isort ./src && poetry run black ./src && poetry run ruff ./src && poetry run mypy ./src", help = "run all ci"}